--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_core: ^2.15.0
   cloud_firestore: ^4.8.3
   json_annotation: ^4.8.1
+  firebase_auth: ^4.7.2
 
 dev_dependencies:
   flutter_test:
